--- a/app/src/main/res/layout/activity_socket.xml
+++ b/app/src/main/res/layout/activity_socket.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SocketActivity">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:text="start server"
+        android:text="start socket"
         android:tag="0"
         android:onClick="controlServer"/>
 
