--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -21,6 +21,7 @@
             android:text="HOST"/>
 
         <EditText
+            android:id="@+id/etHost"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:inputType="text"
@@ -44,10 +45,55 @@
             android:text="PORT"/>
 
         <EditText
+            android:id="@+id/etPort"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:inputType="number"
             android:hint="e.g. : 2121"
+            android:text=""/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="center"
+            android:text="LOGIN USERNAME"/>
+
+        <EditText
+            android:id="@+id/etUserName"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:hint="e.g. : ftp"
+            android:text=""/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="center"
+            android:text="LOGIN PASSWORD"/>
+
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:hint="e.g. : ftp"
             android:text=""/>
     </LinearLayout>
 
